users (non-concurrent) generator; gzip compression; CLI commands; seed bug fixed; lower timeouts; new user model;
